[package]
name = "egui_pigeon"
description = "A egui implementation for pigeon-2d"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Chameko/egui_pigeon"
authors = ["Chameko"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pigeon-2d = "0.5"
pigeon-parrot = "0.4"
wgpu = "0.13"
egui = {version = "0.18.1", features = ["bytemuck"]}
bytemuck = {version = "1.9.1", features = ["derive"]}
euclid = "0.22"
log = "0.4"

[dev-dependencies]
env_logger = "0.9"
winit = "0.26"
egui-winit = "0.18"
paste = "1.0"
pollster = "0.2"
egui_demo_lib = "0.18"
itertools = "0.10"